--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <Body style="background-color:black">
 
-<iframe width="1000" height="1200" src="https://www.youtube.com/embed/2lPcCNyopGI?rel=0&amp;controls=0&amp;showinfo=0;autoplay=1" allowfullscreen></iframe>
+<iframe width="1000" height="1200" src="https://www.youtube.com/embed/2lPcCNyopGI?rel=0&amp;controls=0&amp;showinfo=0;autoplay=1" allowfullscreen controls autoplay></iframe>
 
 
 </html>
